# news_crawler

./: .gitignore  Readme.md  config.py  constants.py  crawler.py  crawler_usage.py  main.py  news_summary.py  nytimes_crawler.py  pyproject.toml  setting.py  summary_generator.py  text_processing.py
article/: darticle.py  nytimes_article.py
crawler/: config.py  constants.py  debug.py  news_summary.py  nytimes_crawler.py
example/: Llama_index_processing_test1.py  crawler.py  crawler_BS4.py  crawler_parser.py  crawler_selenium.py  crawler_test.py  doc_summary_index_usage.py  doc_summary_index_useage.py
index/: default__vector_store.json  docstore.json  index_store.json
link/: dlink.py  nytimes_link.py
network/: network.py
result/: title_20231116_143315.txt  title_20231116_144056.txt  title_20231116_144616.txt
results/: After Outcry, Writers Guild Tries to Explain Silence on Hamas Attack_20231116_162059.txt  INTERNATIONAL_BUSINESS;_BMW_Shares_Fall_on_Worries_Over_Rover.txt  INTERNATIONAL_BUSINESS;_BMW_Shares_Fall_on_Worries_Over_Rover_20231115_182312.txt  INTERNATIONAL_BUSINESS;_BMW_Shares_Fall_on_Worries_Over_Rover_20231115_183040.txt  INTERNATIONAL_BUSINESS;_BMW_Shares_Fall_on_Worries_Over_Rover_20231115_183239.txt  T_20231116_162404.txt  T_20231116_162411.txt  T_20231116_162419.txt
sample/: Business_r200_1122_142247.txt  Sports_korea_1122_145352.txt  Sports_korea_1122_145357.txt  Sports_korea_1122_145403.txt  World_biden_1122_153943.txt  business_hamas_1.txt  business_hamas_1_1117_150045.txt  world_israel_1122_142137.txt  world_israel_1122_142141.txt
(+39 files in other folders)
