[tool.poetry]
name = "crawler-test"
version = "0.1.0"
description = ""
authors = ["or-m-or <htth815@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.0"
requests = "^2.31.0"
bs4 = "^0.0.1"
selenium = "4.11.2"
goose3 = "^3.1.17"
configobj = "^5.0.8"
chromedriver-autoinstaller = "^0.6.2"
pyperclip = "^1.8.2"
pyautogui = "^0.9.54"
undetected-chromedriver = "^3.5.3"
fake-useragent = "^1.3.0"
selenium-stealth = "^1.0.6"
python-dotenv = "^1.0.0"
llama-index = {version = "^0.9.2", python = ">=3.11,<3.12"}
langchain = "^0.0.338"
jinja2 = "^3.1.2"
transformers = "^4.35.2"
pytest = "^7.4.3"
torch = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
